2003-12-07  Bruno Haible  <bruno@clisp.org>

	* po/sv.po: New file, from Jan Djärv <jan.h.d@swipnet.se>.
	* po/tr.po: New file, from
	Nilgün Belma Bugüner <nilgun@superonline.com>.
	* po/LINGUAS: Add sv, tr.

2003-12-07  Bruno Haible  <bruno@clisp.org>

	* hello-perl/hello-1.pl.in: Renamed from hello-perl/hello.pl. Make it
	work.
	* hello-perl/hello-2.pl.in: New file, from Guido Flohr.
	* hello-perl/po/Makefile.am (POTFILES): Update.
	(XGETTEXT_OPTIONS): Add options needed for the Locale::TextDomain API.
	* hello-perl/configure.ac: Update accordingly.
	* hello-perl/Makefile.am: Update accordingly.
	* Makefile.am (EXAMPLESFILES): Update.

2003-12-06  Bruno Haible  <bruno@clisp.org>

	* hello-objc-gnustep/po/LocaleAliases: Add many new locales. Fix typo
	for EcuadorSpanish. Remove conflicting entries for Indonesian and
	Hebrew.

2003-12-06  Bruno Haible  <bruno@clisp.org>

	* hello-objc-gnustep/autoclean.sh: Also remove the *.lproj directories.
	* hello-objc-gnustep/po/GNUmakefile: Include the general rules at the
	beginning, not at the end, so that our .SUFFIXES tag has an effect.
	($(ENSTRINGSFILES)): Create the target directory.

2003-12-06  Bruno Haible  <bruno@clisp.org>

	* hello-*/INSTALL: Update the installation instructions.
	* hello-c++-qt/BUGS: New file.
	* hello-c++-kde/BUGS: New file.
	* hello-objc-gnustep/BUGS: New file.
	* hello-smalltalk/BUGS: New file.
	* hello-java-awt/BUGS: New file.
	* hello-java-swing/BUGS: New file.
	* Makefile.am (EXAMPLESFILES): Add them.

2003-12-02  Bruno Haible  <bruno@clisp.org>

	* examples/Makefile.am (EXTRA_DIST): Don't add the EXAMPLESFILES.
	(distdir1): New rule. Install the EXAMPLESFILES after 'update-po'.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* po/mmsmallpo.sh: Remove the POT-Creation-Date line from the generated
	PO file.
	* Makefile.am (EXAMPLESFILES): Add hello-pascal/hello.rst.

2003-11-30  Bruno Haible  <bruno@clisp.org>
